[package]
name = "data-manager-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
crossbeam = "0.8.4"
dashmap = "6.1.0"
hex = "0.4.3"
rand = "0.8.5"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
